# encoding_fun

./: CMakeLists.txt
src/: decoder.cpp
